export interface Temporada {
    modificador:number;
}