import { Temporada } from "./temporada";

export default class TemporadaAlta implements Temporada{
    public modificador: number = 0.2;
}