import { Temporada } from "./temporada";

export default class TemporadaBaja implements Temporada{
    public modificador: number = -0.1;
}