@startuml Diagrama de clases
class Garage {
    - vehiculos: Map<string,Vehiculo>;
    - reservas: Set<Evento>;
    - mantenimientos: Set<Evento>;
    
    + comprarVehiculo(vehiculo: Vehiculo)
    + setters_y_getters()
    + cambiarTemporada()
}

class Cliente {
    + reservar()
    + devolverVehiculo()
}

class Mecanico {
    + realizarMantenimiento()
}

class Lavanderia {
    + limpiarVehiculo()
}

abstract class Vehiculo {
    - matricula: string
    - estado: Estado
    - estadisticas: Estadisticas

    # temporada: Temporada

    + setters_y_getters()
    + abstract obtenerTarifa(dias: number, kilometros: number)
    + abstract obtenerTarifaMantenimiento(dias: number)
}

class Compacto {

}
class Sedán {

}
class SUV {

}

class Estado {
    - kilometrosRecorridos: number
    - ultimoMantenimiento: Date
    - alquileresCompletados: number
    - necesitaLimpieza: boolean
    
    + setters_y_getters()
    + necesitaMantenimiento()
}

class Estadisticas {
    - alquileres: number
    - rentabilidad: number

    +setters_y_getters()
}

class Reporte {
    + vehiculoMasAlquilado()
    + vehiculoMenosAlquilado()
    + mayorRentabilidad()
    + menorRentabilidad()
    + ocupacionDeLaFlota()
}

class Evento {
    - fechaInicio: Date
    - fechaFin: Date
    - cant_dias: number
    - vehiculo: Vehiculo

    + setters_y_getters()

    - calcularCantDias()
}

class Calendario {
    static revisarCalendario()
    static estaDisponibleHoy()
}

class Radar {
    static flotaActiva()
}

class OperacionesInvalidas {
    static estaDisponible()
    static estaDisponibleHoy()
    static vehiculoEnStock()
    static reservaEnReservas()
    static eventoValido()
}

class DisparadorMantenimiento {
    static chequearVehiculo()
}

interface Temporada {
    modificador:number
    + abstract getModificador()
}
class TemporadaBaja implements Temporada{
    # modificador:number
    + getModificador()
}
class TemporadaMedia implements Temporada{
    # modificador:number
    + getModificador()
}
class TemporadaAlta implements Temporada{
    # modificador:number
    + getModificador()
}


' Relaciones


Cliente *-- Garage

Cliente *-r- DisparadorMantenimiento

Mecanico *-r- Garage
Lavanderia *-l- Garage

Garage *-d- Vehiculo
Garage *-d- Evento

Evento *-r- Vehiculo

Vehiculo <|-- Compacto
Vehiculo <|-- Sedán
Vehiculo <|-- SUV

Vehiculo *-r- Temporada
Vehiculo *-r- Estado
Vehiculo *-r- Estadisticas

OperacionesInvalidas *-- Calendario

Reporte *-- Radar


@enduml